Change OoO for maxBounds